data/exec-logs/github/rtatman_did-it-rain-in-seattle-19482017/will-it-rain-in-seattle.exec.log
  File "will-it-rain-in-seattle.py", line 26
    imputer=SimpleImputer(missing_values='NaN', strategy=""constant"")
                                                                  ^
SyntaxError: invalid syntax
